back: integrations init
